[workspace]
members = ["asm", "disasm", "fuzz", "genisa"]
resolver = "2"

[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["powerpc", "wii", "gamecube", "xbox"]
repository = "https://github.com/rjkiv/ppc750cl.git"
rust-version = "1.74"
