[package]
name = "ppc750cl-asm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Assembler for PowerPC 750CL"
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
phf = "0.11"
