[package]
name = "ppc750cl-asm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Assembler for PowerPC 750CL"
readme = "../README.md"
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ppc750cl-asm"
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
phf = "0.11"
