[package]
name = "ppc750cl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Disassembler for PowerPC 750CL"
readme = "../README.md"
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Intentionally left blank.
