[package]
name = "ppc750cl-genisa"
version = "0.3.0"
edition = "2021"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
description = "Rust code generator for ppc750cl"
repository = "https://github.com/encounter/ppc750cl"
publish = false

[dependencies]
anyhow = "1.0"
log = "0.4"
num-traits = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
simple_logger = "4.3"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
phf = "0.11"
phf_codegen = "0.11"
